<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/topbar_bg" >

        <Button
            android:id="@+id/back"
            android:layout_width="50dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="3.0dip"
            android:background="@drawable/btn_back_bg"
            android:clickable="true"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/jifen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:paddingRight="20dip"
            android:text="积分商城"
            android:textColor="@drawable/textcolor_selector03"
            android:textSize="14dip"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_top_layout" >

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_user_icon_bg"
                android:src="@drawable/login_user_default_icon" />

            <LinearLayout
                android:id="@+id/login_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:background="@drawable/android_layout_bg"
                android:orientation="vertical" >

                <LinearLayout style="@style/PersonalMainLayoutStyle" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/more_activity_item_selector_bottom_corners"
                        android:orientation="horizontal"
                        android:padding="10sp" >

                        <TextView
                            android:id="@+id/tv_loginaccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginacount"
                            android:textColor="@android:color/black"
                            android:textSize="18.0sp" />

                        <EditText
                            android:id="@+id/loginaccount"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:focusableInTouchMode="true"
                            android:padding="5.0dip"
                            android:paddingRight="30dp"
                            android:textColor="#ff3b3b3b"
                            android:textSize="16.0sp" >
                        </EditText>
                    </LinearLayout>

                    <View style="@style/PersonalLine" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/more_activity_item_selector_bottom_corners"
                        android:orientation="horizontal"
                        android:padding="10sp" >

                        <TextView
                            android:id="@+id/tv_loginpassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loginpassword"
                            android:textColor="@android:color/black"
                            android:textSize="18.0sp" />

                        <EditText
                            android:id="@+id/loginpassword"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:focusableInTouchMode="true"
                            android:inputType="textPassword"
                            android:padding="5.0dip"
                            android:paddingRight="30dp"
                            android:textColor="#ff3b3b3b"
                            android:textSize="16.0sp" >
                        </EditText>

                        <ToggleButton
                            android:id="@+id/isShowPassword"
                            style="@style/ToggleButtonStyle"
                            android:layout_width="40dp"
                            android:layout_height="18dp"
                            android:background="@drawable/selector_toggle"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_mima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dip"
                    android:text="记住密码"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/cb_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_mima"
                    android:layout_marginLeft="12dip"
                    android:text="自动登录"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_auto"
                    android:layout_marginLeft="12dip"
                    android:clickable="true"
                    android:text="忘记密码？"
                    android:textColor="@drawable/textcolor_selector02" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_style_red"
                    android:gravity="center"
                    android:text="@string/login_btn"
                    android:textColor="@drawable/textcolor_selector03"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="fill_parent"
                    android:layout_height="40sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_style_three"
                    android:gravity="center"
                    android:text="注册"
                    android:textColor="@drawable/textcolor_selector"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/checkout"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_style_three"
                android:gravity="center"
                android:text="注销"
                android:textColor="@drawable/textcolor_selector"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dip"
                android:text="您的积分"
                android:textColor="@color/topbar_red"
                android:textSize="17dip"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>